fix font problem

--- a/html/site-structure/style.css
+++ b/html/site-structure/style.css
@@ -18,7 +18,7 @@ html, body {
   /* 文字排版 */
   
   h1, h2, h3 {
-    font-family: 'Sonsie One', cursive;
+    font-family: 'Sonsie One', 'ZCOOL KuaiLe', cursive;
     color: #2a2a2a;
   }
   
