trivial color change

--- a/html/bird-watching/style.css
+++ b/html/bird-watching/style.css
@@ -69,7 +69,7 @@ main, header, nav, article, aside, footer, section {
 h1 {
   flex: 5;
   text-transform: uppercase;
-  color: #fff;
+  color: black;
 }
 
 header img {
