--- a/extras/calculator/styles/style.css
+++ b/extras/calculator/styles/style.css
@@ -12,7 +12,7 @@ table {
   border-spacing: 0px;
 }
 
-table #display {
+#display {
   background-color: #292929;
   color: #ffffff;
   border-top-left-radius: 5px;
@@ -26,7 +26,7 @@ table #display {
   padding: 21px 12px 0px 12px;
 }
 
-table #btn-0 {
+#btn-0 {
   text-align: left;
   padding-left: 23px;
 }
