--- a/extras/tools/key-event/style.css
+++ b/extras/tools/key-event/style.css
@@ -1,34 +1,26 @@
-body {
+.fx {
     -webkit-display: flex;
     display: flex;
-}
-    
-.flex {
+    margin-left: -20px;
+    margin-right: -20px;
+  }
+  
+  .fx > div {
     padding-left: 20px;
     padding-right: 20px;
-}
-    
-.flex-left {
-    flex: 1;
-    flex-grow: 1;
+  }
+  
+  .fx > div:first-child {
+     width: 30%;
+  }
+  
+  .flex {
     -webkit-flex: 1;
-    -webkit-flex-grow: 1;
-}
-    
-.flex-right {
-    flex: 2;
-    flex-grow: 2;
-    -webkit-flex: 2;
-    -webkit-flex-grow: 2;
-}
-    
-#test-target {
+    flex: 1;
+  }
+  
+  #test-target {
     display: block;
     width: 100%;
-    margin-bottom: 10px;
-    resize: none;
-}
-
-#console-log {
-    overflow: auto;
-}
+    margin-bottom: 10px; 
+  }
